--- a/src/components/shared/Navbar.module.css
+++ b/src/components/shared/Navbar.module.css
@@ -22,7 +22,7 @@
     height: 70px;
 }
 
-.header {
+.title {
     font-size: 40px;
     color: #e10600;
     font-weight: 700;
@@ -39,7 +39,7 @@
     font-size: 20px;
     font-weight: 600;
     padding: 6px 16px;
-    letter-spacing: 1.2px;
+    letter-spacing: 1.5px;
     text-transform: uppercase;
     border-radius: 16px;
     transition: all 0.15s;
